Fixed the usage of the deprecated URL(String)